--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Cmpt351survey by Wilsonkho</title>
-
+    
+    	<script type="text/javascript" src="http://i0.poll.fm/survey.js" charset="UTF-8"></script>
+<script type="text/javascript" charset="utf-8">
+  polldaddy.add( {
+    type: 'slider',
+    embed: 'poll',
+    delay: 100,
+    visit: 'single',
+    id: 9278691
+  } );
+</script>
+<noscript><a href="http://polldaddy.com/poll/9278691/">Test</a></noscript>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
