--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     id: 9278691
   } );
 </script>
+
+
 <noscript><a href="http://polldaddy.com/poll/9278691/">Test</a></noscript>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -41,7 +43,20 @@
       <section>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<div class="pd-embed" id="pd_1453824709"></div>
+<script type="text/javascript">
+  var _polldaddy = [] || _polldaddy;
 
+  _polldaddy.push( {
+    type: "iframe",
+    auto: "1",
+    domain: "how29.polldaddy.com/s/",
+    id: "myearthhour-product-testing-survey",
+    placeholder: "pd_1453824709"
+  } );
+
+  (function(d,c,j){if(!document.getElementById(j)){var pd=d.createElement(c),s;pd.id=j;pd.src=('https:'==document.location.protocol)?'https://polldaddy.com/survey.js':'http://i0.poll.fm/survey.js';s=document.getElementsByTagName(c)[0];s.parentNode.insertBefore(pd,s);}}(document,'script','pd-embed'));
+</script>
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
