--- a/index.html
+++ b/index.html
@@ -3,51 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cmpt351survey by Wilsonkho</title>
+    <title>CMPT 351 myEarthHour Usability Test</title>
     
-
-
-<noscript><a href="http://polldaddy.com/poll/9278691/">Test</a></noscript>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
+
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Cmpt351survey</h1>
-        <p>Browser Survey for CMPT351 Project</p>
+        <h1>myEarthHour Product Testing</h1>
+        <p>Project page for testing myEarthHour</p>
 
-        <p class="view"><a href="https://github.com/Wilsonkho/cmpt351survey">View the Project on GitHub <small>Wilsonkho/cmpt351survey</small></a></p>
-
-
+        <p>Surveys used for screening and data gathering: <br>
         <ul>
-          <li><a href="https://github.com/Wilsonkho/cmpt351survey/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Wilsonkho/cmpt351survey/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Wilsonkho/cmpt351survey">View On <strong>GitHub</strong></a></li>
+          <a href="screening.html">Screening Survey</a> 
+          <a href="questionaire.html">myEarthHour Questionaire</a> 
         </ul>
+        </p>
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome myEarthHour Product Testing Page</h3>
 <div class="pd-embed" id="pd_1453824709"></div>
-<script type="text/javascript">
-  var _polldaddy = [] || _polldaddy;
 
-  _polldaddy.push( {
-    type: "iframe",
-    auto: "1",
-    domain: "how29.polldaddy.com/s/",
-    id: "myearthhour-product-testing-survey",
-    placeholder: "pd_1453824709"
-  } );
-
-  (function(d,c,j){if(!document.getElementById(j)){var pd=d.createElement(c),s;pd.id=j;pd.src=('https:'==document.location.protocol)?'https://polldaddy.com/survey.js':'http://i0.poll.fm/survey.js';s=document.getElementsByTagName(c)[0];s.parentNode.insertBefore(pd,s);}}(document,'script','pd-embed'));
-</script>
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This page is dedicated to gather data from target users for the myEarthHour project. </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
