project page touch up

--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome myEarthHour Product Testing Page</h3>
 <div class="pd-embed" id="pd_1453824709"></div>
 
-<p>This page is dedicated to gather data from target users for the myEarthHour project. </p>
+<p>This page is dedicated to gather data from target users for the myEarthHour project and evaluating the usability problems upon the website development. </p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>About myEarthHour</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>myEARTHHOUR encourages all of us to make small changes in our lives that, when combined, amount to large, positive impact on the sustainability of our planet. You can participate as an individual by committing to environmentally-conscious Activities, earn Points by completing those Activities, and engage in friendly competition with others. In celebration of Earth Hour as an international movement, myEARTHHOUR is a personal tracking tool that encourages everyone to do a little more beyond the actual 60 minutes of Earth Hour.</p>
 
-<h3>
+<p>myEARTHHOUR is operated by a team led by Dr. Leo Wong at MacEwan University as part of an academic research project, examining people’s environmentally-conscious activity commitments through the use of an online tracking software. This project has been approved by the Research Ethics Board at MacEwan University.</p>
+
+<p>Research Team: Dr. Leo Wong (Principal Investigator), Dr. Indratmo (Co-Investigator), Dr. Sharon Bratt (Co-Investigator), Rannie Lou Rojas (Research Assistant), and Rebecca Dalke (Graphics Designer); Students in MacEwan University’s LENP 312 (Introduction to NonProfit Management); and other student volunteers at MacEwan University. An initial prototype of the application was developed by Ian Nalbach, David Sollinger, and Nathan Cairns. This project is supported by the City of Edmonton.</p>
+
+<!-- <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
@@ -45,7 +49,7 @@
 <a href="screening.html">Screening Survey</a>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p> -->
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
